; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_irq_64.c_pre_flow_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_irq_64.c_pre_flow_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.irq_desc = type { i32 }
%struct.irq_handler_data = type { i32, i32, i32 (i32, i32, i32)* }

@virt_irq_table = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.irq_desc*)* @pre_flow_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pre_flow_handler(i32 %0, %struct.irq_desc* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.irq_desc*, align 8
  %5 = alloca %struct.irq_handler_data*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store %struct.irq_desc* %1, %struct.irq_desc** %4, align 8
  %7 = load i32, i32* %3, align 4
  %8 = call %struct.irq_handler_data* @get_irq_chip_data(i32 %7)
  store %struct.irq_handler_data* %8, %struct.irq_handler_data** %5, align 8
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @virt_irq_table, align 8
  %10 = load i32, i32* %3, align 4
  %11 = zext i32 %10 to i64
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %6, align 4
  %15 = load %struct.irq_handler_data*, %struct.irq_handler_data** %5, align 8
  %16 = getelementptr inbounds %struct.irq_handler_data, %struct.irq_handler_data* %15, i32 0, i32 2
  %17 = load i32 (i32, i32, i32)*, i32 (i32, i32, i32)** %16, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load %struct.irq_handler_data*, %struct.irq_handler_data** %5, align 8
  %20 = getelementptr inbounds %struct.irq_handler_data, %struct.irq_handler_data* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.irq_handler_data*, %struct.irq_handler_data** %5, align 8
  %23 = getelementptr inbounds %struct.irq_handler_data, %struct.irq_handler_data* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i32 %17(i32 %18, i32 %21, i32 %24)
  %26 = load i32, i32* %3, align 4
  %27 = load %struct.irq_desc*, %struct.irq_desc** %4, align 8
  %28 = call i32 @handle_fasteoi_irq(i32 %26, %struct.irq_desc* %27)
  ret void
}

declare dso_local %struct.irq_handler_data* @get_irq_chip_data(i32) #1

declare dso_local i32 @handle_fasteoi_irq(i32, %struct.irq_desc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
